# lib-cl-sii-python

./: .black.cfg.toml  .bumpversion.cfg  .coveragerc.test.ini  .deepsource.toml  .ecrc  .editorconfig  .editorconfig-checker.json  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .markdownlint.yaml  CODEOWNERS  CONTRIBUTING.md  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  commitlint.config.js  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yaml  ci.yaml  dependency-review.yaml  deploy.yaml  git-commit-lint.yaml  release.yaml  super-linter.yaml  task-release-and-deploy.yaml
cl_sii/: __init__.py
cl_sii/base/: constants.py
cl_sii/contribuyente/: constants.py
cl_sii/cte/f29/: data_models.py  parse_datos_obj.py
cl_sii/data/cte/: f29_datos_obj_missing_key_fixes.json
cl_sii/dte/: constants.py  data_models.py  parse.py
cl_sii/extras/: dj_form_fields.py  dj_model_fields.py  mm_fields.py
cl_sii/libs/: crypto_utils.py  csv_utils.py  dataclass_utils.py  encoding_utils.py  io_utils.py  json_utils.py  mm_utils.py  rows_processing.py  tz_utils.py  xml_utils.py
cl_sii/rcv/: __init__.py  constants.py  data_models.py  parse.py  parse_csv.py
cl_sii/rtc/: __init__.py  constants.py  data_models.py  data_models_aec.py  data_models_cesiones_periodo.py  parse_aec.py  parse_other.py  xml_utils.py
cl_sii/rut/: __init__.py  constants.py  crypto_utils.py
docs/: project-maintenance.rst
requirements/: base.txt  dev.txt  extras.txt  release.txt  test.txt
scripts/: canonicalize_xml_file.py  clean_dte_xml_file.py  example.py  try_process_rcv_csv_file.py
scripts/study_aec_sample/: main.py
src/cl_sii/: __init__.py
src/cl_sii/base/: constants.py
src/cl_sii/contribuyente/: constants.py
src/cl_sii/cte/: __init__.py  data_models.py  parsers.py
src/cl_sii/cte/f29/: __init__.py  (+2 more)
src/cl_sii/dte/: constants.py  data_models.py  parse.py
src/cl_sii/extras/: dj_filters.py  dj_form_fields.py  dj_model_fields.py  dj_url_converters.py  drf_fields.py  drf_serializers.py  mm_fields.py  pydantic_types.py
src/cl_sii/libs/: __init__.py  charset_utils.py  crypto_utils.py  csv_utils.py  dataclass_utils.py  mm_utils.py  rows_processing.py  tz_utils.py  xml_utils.py
src/cl_sii/rcv/: constants.py  data_models.py  parse_csv.py
src/cl_sii/rtc/: __init__.py  constants.py  data_models.py  data_models_aec.py  parse_aec.py  parse_cesiones_periodo.py  xml_utils.py
src/cl_sii/rut/: __init__.py  constants.py  crypto_utils.py
src/scripts/: canonicalize_xml_file.py  clean_dte_xml_file.py  example.py
src/tests/: test_contribuyente.py  test_cte_parsers.py  test_dte.py  test_dte_constants.py  test_dte_data_models.py  test_dte_parse.py  test_extras_dj_filters.py  test_extras_dj_form_fields.py  test_extras_dj_model_fields.py  test_extras_dj_url_converters.py  test_extras_drf_serializers.py  test_extras_mm_fields.py  test_extras_pydantic_types.py  test_libs_charset_utils.py  test_libs_crypto_utils.py  test_libs_csv_utils.py  test_libs_dataclass_utils.py  test_libs_encoding_utils.py  test_libs_io_utils.py  test_libs_json_utils.py  test_libs_rows_processing.py  test_libs_tz_utils.py  test_libs_xml_utils.py  test_rcv_constants.py  test_rcv_data_models.py  test_rcv_parse_csv.py  test_rtc_constants.py  test_rtc_data_models.py  test_rtc_data_models_aec.py  test_rtc_parse_aec.py  test_rtc_parse_cesiones_periodo.py  test_rtc_xml_utils.py  test_rut.py  test_rut_constants.py  test_rut_crypto_utils.py
src/tests/test_data/: .editorconfig
tests/: cte_f29_factories.py  test_cte_f29_data_models.py  test_cte_f29_parse_datos_obj.py  test_dte_constants.py  test_dte_data_models.py  test_dte_parse.py  test_extras_dj_form_fields.py  test_extras_dj_model_fields.py  test_extras_drf_fields.py  test_extras_mm_fields.py  test_libs_crypto_utils.py  test_libs_csv_utils.py  test_libs_dataclass_utils.py  test_libs_encoding_utils.py  test_libs_io_utils.py  test_libs_json_utils.py  test_libs_mm_utils.py  test_libs_rows_processing.py  test_libs_tz_utils.py  test_libs_xml_utils.py  test_rcv.py  test_rcv_constants.py  test_rcv_data_models.py  test_rcv_parse.py  test_rcv_parse_csv.py  test_rtc_constants.py  test_rtc_data_models.py  test_rtc_data_models_aec.py  test_rtc_data_models_cesiones_periodo.py  test_rtc_parse_aec.py  test_rtc_xml_utils.py  test_rut.py  test_rut_crypto_utils.py  test_scripts_canonicalize_xml_file.py  test_scripts_clean_dte_xml_file.py  test_xml_utils.py  utils.py
tests/test_data/rcv_csv/: invalid.csv  purchase_all_document_types.csv  purchase_invalid_row.csv  purchase_missing_row.csv
tests/test_data/sii-crypto/: AEC--76354771-K--33--170--SEQ-2-cert.pem  AEC--76399752-9--33--25568--SEQ-1-signature-value-base64.txt  DTE--60910000-1--33--2336600-cert.pem  DTE--60910000-1--33--2336600-signature-value-base64.txt  DTE--76354771-K--33--170-cert.der  DTE--76354771-K--33--170-signature-value-base64.txt  DTE--76399752-9--33--25568-signature-value-base64.txt  DTE--96670340-7--61--110616-signature-value-base64.txt
tests/test_data/sii-dte/: DTE--60910000-1--33--2336600--cleaned-signature_xml.xml  DTE--60910000-1--33--2336600--cleaned-signed_data.xml  DTE--60910000-1--33--2336600--cleaned-signed_xml.xml  DTE--76354771-K--33--170--cleaned-mod-bad-cert-no-base64.xml  DTE--76354771-K--33--170--cleaned-mod-changed-monto.xml  DTE--76354771-K--33--170--cleaned-mod-empty-emails.xml  DTE--76354771-K--33--170--cleaned-mod-removed-signature.xml  DTE--76354771-K--33--170--cleaned-signed_data.xml  DTE--76354771-K--33--170.xml  DTE--76399752-9--33--25568--cleaned.xml  DTE--76399752-9--33--25568.xml  DTE--96670340-7--61--110616--cleaned.xml
tests/test_data/sii-rcv/: RCV-compra-pendiente-rz_leading_trailing_whitespace.csv  RCV-compra-registro-rz_leading_trailing_whitespace.csv  RCV-venta-rz_leading_trailing_whitespace.csv
tests/test_data/sii-rtc/: AEC--76354771-K--33---170--SEQ-2.xml  AEC--76399752-9--33--25568--SEQ-1.xml
(+59 files in other folders)
